<resources>
    <string name="app_name">Dartmouth Drinks</string>
    <string name="Good_Sam">\n The Good Sam policy protects all Dartmouth students. If you call Emergency Services for another student, neither you, the intoxicated party, nor the party host will face disciplinary action. Always look for help. \n \nRead more at: https://student-affairs.dartmouth.edu/policy/alcohol-and-drug-policy </string>
    <string-array name="Sex">
        <item>---</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="a0.02">No loss of coordination, slight euphoria and loss of shyness. Depressant effects are not apparent. Mildly relaxed and maybe a little lightheaded.</string>
    <string name="a0.04">Feeling of well-being, relaxation, lower inhibitions, sensation of warmth. Euphoria. Some minor impairment of reasoning and memory, lowering of caution. Your behavior may become exaggerated and emotions intensified (Good emotions are better, bad emotions are worse)</string>
    <string name="a0.07">Slight impairment of balance, speech, vision, reaction time, and hearing. Euphoria. Judgment and self-control are reduced, and caution, reason and memory are impaired, .08 is legally impaired and it is illegal to drive at this level. You will probably believe that you are functioning better than you really are.</string>
    <string name="a0.1"> Significant impairment of motor coordination and loss of good judgment. Speech may be slurred; balance, vision, reaction time and hearing will be impaired. Euphoria.</string>
    <string name="a0.13">Gross motor impairment and lack of physical control. Blurred vision and major loss of balance. Euphoria is reduced and dysphoria (anxiety, restlessness) is beginning to appear. Judgment and perception are severely impaired.</string>
    <string name="a0.16">Dysphoria predominates, nausea may appear. The drinker has the appearance of a "sloppy drunk."</string>
    <string name="a0.2">Felling dazed, confused or otherwise disoriented. May need help to stand or walk. If you injure yourself you may not feel the pain. Some people experience nausea and vomiting at this level. The gag reflex is impaired and you can choke if you do vomit. Blackouts are likely at this level so you may not remember what has happened.</string>
    <string name="a0.25"> All mental, physical and sensory functions are severely impaired. Increased risk of asphyxiation from choking on vomit and of seriously injuring yourself by falls or other accidents.</string>
    <string name="a0.3">STUPOR. You have little comprehension of where you are. You may pass out suddenly and be difficult to awaken.</string>
    <string name="a0.35">Coma is possible. This is the level of surgical anesthesia. </string>
    <string name="a0.4">Onset of coma, and possible death due to respiratory arrest.</string>
    <string name="Time">What time did you have your drink?</string>
    <string name="Welcome">Dartmouth Drinks is a mobile application designed to promote responsible drinking behavior. Best results are achieved upon total accuracy; lying about your drinking habits only hurts yourself and others. Please note: our BAC calculator is only an estimate. Do not use it to determine if you can drive or operate heavy machinery. Have fun and be safe!</string>
    <string name="Explain">Here is a brief explanation of what each of our settings mean!</string>
    <string name="Threshold">This is the BAC threshold at which an action would occur. That action is determined by the following settings</string>
    <string name="Me">This will notify you if your BAC passes the threshold.</string>
    <string name="Friend">This will send a text to a friend (selected by you) if your BAC passes the threshold (set by you). </string>
    <string name="Organizer">This will send a text to the party organizers if your BAC passes the threshold (set by the organizers). </string>
    <string name="FriendText">Hey! I\'m over my BAC threshold. Can you make sure I\'m okay? Sent from Dartmouth Drinks App.</string>
    <string name="OrganizerText1">Hey! My name is</string>
    <string name="OrganizerText2"> . I\'m over your event\'s BAC limit, so please make sure I\'m safe. Sent from Dartmouth Drinks App.</string>
</resources>
