<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/scroll"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Explain"
            android:padding="5dp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:textSize="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Explain"
            android:gravity="center"
            android:textSize="18dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BAC Threshold"
            android:textColor="#006400"
            android:textSize="25dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Threshold"
            android:textSize="18dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notify Me"
            android:textSize="25dp"
            android:padding="5dp"
            android:textColor="#006400"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Me"
            android:textSize="18dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notify Friends"
            android:textColor="#006400"
            android:textSize="25dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Friend"
            android:textSize="18dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notify Organizers"
            android:textColor="#006400"
            android:textSize="25dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Organizer"
            android:textSize="18dp"
            android:padding="5dp"/>






    </LinearLayout>


</ScrollView>